# qt-material-icons

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  compile_icons.py  pyproject.toml
.github/: create_images.py
qt_material_icons/: __init__.py  __main__.py  _icon.py  create.py  extract.py
tests/: __init__.py  extract.py  extracted_icons.py  icons.py
