[project]
name = "qt-material-icons"
version = "0.4.1"
description = "Material Symbols by Google for Qt using PySide"
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = []
requires-python = ">=3.6"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "python-semantic-release>=9.0",
    "PySide6",
    "qt_themes>=0.2",
]
pyside2 = ["PySide2"]
pyside6 = ["PySide6"]
qtpy = ["qtpy>=2.0,<3"]

[project.scripts]
qtmaterialicons = "qt_material_icons.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["qt_material_icons"]

[tool.setuptools.package-data]
"qt_material_icons" = ["resources/*.py"]

[tool.semantic_release]
version_variables = ["qt_material_icons/__init__.py:__version__"]
version_toml  = ["pyproject.toml:project.version"]

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.black]
skip-string-normalization = true
